fix role metadata